Fixing layout issues with status panel

--- a/packages/cli/assets/browser-console/src/components/StatusPanel.scss
+++ b/packages/cli/assets/browser-console/src/components/StatusPanel.scss
@@ -137,7 +137,7 @@
 
   & > .building,
   & > .deploying {
-    margin-left: 0.5rem;
+    margin-left: 0.4rem;
     vertical-align: 1px;
     text-transform: uppercase;
     font-size: $font-size-sm;
